part2/2.07/manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: pong-with-db
  namespace: random-pong
spec:
  rules:
  - host: localhost
  - http:
      paths:
      - path: /pingpong
        backend:
          serviceName: pong-front-svc
          servicePort: 2345
      - path: /backend
        backend:
          serviceName: pong-back-svc
          servicePort: 2346
